add new cardproduct, add output products in index page, add links index page

--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -57,7 +57,7 @@
                     <p style="font-weight: 600; font-size: 2.625em;" class="uk-margin-large-left">Одежда</p>
                     <p style="font-weight: 300; font-size: 1.5em;" class="uk-margin-medium-left">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit,<br> sed do eiusmod tempor.</p>
                     <div style="margin: auto; margin-top: 5%;" class="uk-margin-medium-left">
-                        <a class="uk-button uk-button-secondary uk-border-pill">Перейти в каталог</a>
+                        <a class="uk-button uk-button-secondary uk-border-pill" href="/goods/category/Clothing">Перейти в каталог</a>
                     </div>
                 </div>
             </div>
@@ -75,30 +75,29 @@
         </div>
         <div class = "uk-width-1-2"  style="height: 80vh">
                 <div class="uk-flex-column">
-                        <div style="height: 39vh"  data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album" uk-img>
-                            <div class="whitefont" style="padding-top: 5% ;">
-                                <p style="font-weight: 600; font-size: 2.625em;" class="uk-margin-large-left">Обувь</p>
-                                <p style="font-weight: 300; font-size: 1.5em;" class="uk-margin-medium-left">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
-                                <div style="margin: auto;" class="uk-margin-medium-left">
-                                    <a class="uk-button uk-button-secondary uk-border-pill">Перейти в каталог</a>
-                                </div>
-                            </div>
+                        <a class="uk-link-reset" href="/goods/category/Shoes">
 
-                        </div> 
+                            <div style="height: 39vh"  data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album" uk-img>
+                                    <div class="whitefont" style="padding-top: 5% ;">
+                                        <p style="font-weight: 600; font-size: 2.625em;" class="uk-margin-large-left">Обувь</p>
+                                    </div>
+                            </div> 
+                        </a>
 
-                        <div class="uk-flex" style="margin-top: 2vh">
-                            <div style="margin-right: 2vh" style="height: 39vh" class="uk-width-1-2" uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album">
-                                <div class="whitefont uk-margin-top">
-                                    <p style="font-weight: 600; font-size: 2.25em; margin-left: 7%">Аксессуары</p>
+                        <a class="uk-link-reset" href="/goods/category/Interior">
+                            <div class="uk-flex" style="margin-top: 2vh">
+                                <div style="margin-right: 2vh" style="height: 39vh" class="uk-width-1-2" uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album">
+                                    <div class="whitefont uk-margin-top">
+                                        <p style="font-weight: 600; font-size: 2.25em; margin-left: 7%">Аксессуары</p>
+                                    </div>
+                                </div>
+                                <div style="height: 39vh" class="uk-width-1-2" uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album">
+                                    <div class="whitefont uk-margin-top" >
+                                        <p style="font-weight: 600; font-size: 2.25em;  margin-left: 7%">Для дома</p>
+                                    </div>
                                 </div>
                             </div>
-                            <div style="height: 39vh" class="uk-width-1-2" uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album">
-                                <div class="whitefont uk-margin-top" >
-                                    <p style="font-weight: 600; font-size: 2.25em;  margin-left: 7%">Для дома</p>
-                                </div>
-                            </div>
-                            
-                        </div>
+                        </a>
                 </div>
         </div>
     </div>
@@ -115,12 +114,13 @@
 
 
     <div class="uk-grid uk-margin-large-top" style="height: 90vh">
+        
         <div class="uk-width-1-3 ">
             <div style="height: 90vh; margin-left: 3%" uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album">
                 <p style="font-weight: 600; font-size: 2.25em; text-align: center;" >Подборки товаров</p>
 
                 <div>
-                    <a class="uk-button uk-button-secondary uk-border-pill" style="margin-top: 90%; width: 50%; margin-left: 25%;">Перейти в каталог</a>
+                    <a class="uk-button uk-button-secondary uk-border-pill" style="margin-top: 90%; width: 50%; margin-left: 25%;" href="/goods/">Перейти в каталог</a>
                 </div>
             </div>
         </div>
@@ -128,48 +128,20 @@
 
         <div class="uk-wrap uk-width-2-3" style="height: 90vh" >
             <div class="uk-grid uk-width-1" uk-grid style="margin-left: 2%; height: 90vh">
-                <div style="height: 45vh; width: 32%; margin: 0">
-                    <div style="height: 70%; " uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album"></div>
-                    <div>
-                        <p style="font-weight: 300; font-size: 18px;" class="uk-margin-small-left uk-margin-remove-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <p style="font-weight: 300; font-size: 16px;" class="uk-margin-small-left uk-margin-remove-top uk-margin-remove-bottom">1990 руб.</p>
-                    </div>
+
+            {% for product in products_start %}
+
+               <div style="height: 45vh; width: 32%; margin: 0">
+                    <a class="uk-link-reset" href="">
+                        <div style="height: 70%; " uk-img data-src="{{product.picture1}}"></div>
+                        <div>
+                            <p style="font-weight: 300; font-size: 18px;" class="uk-margin-small-left uk-margin-remove-bottom">{{ product.product_name }}</p>
+                            <p style="font-weight: 300; font-size: 16px;" class="uk-margin-small-left uk-margin-remove-top uk-margin-remove-bottom">{{product.show_price}} ₽</p>
+                        </div>
+                    </a>
                 </div>
-                <div style="height: 45vh; width: 32%;">
-                    <div style="height: 70%; " uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album"></div>
-                    <div>
-                        <p style="font-weight: 300; font-size: 18px;" class="uk-margin-small-left uk-margin-remove-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <p style="font-weight: 300; font-size: 16px;" class="uk-margin-small-left uk-margin-remove-top uk-margin-remove-bottom">1990 руб.</p>
-                    </div>
-                </div>
-                <div style="height: 45vh; width: 32%; ">
-                    <div style="height: 70%; " uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album"></div>
-                    <div>
-                        <p style="font-weight: 300; font-size: 18px;" class="uk-margin-small-left uk-margin-remove-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <p style="font-weight: 300; font-size: 16px;" class="uk-margin-small-left uk-margin-remove-top uk-margin-remove-bottom">1990 руб.</p>
-                    </div>
-                </div>
-                <div style="height: 45vh; width: 32%;">
-                    <div style="height: 70%; " uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album"></div>
-                    <div>
-                        <p style="font-weight: 300; font-size: 18px;" class="uk-margin-small-left uk-margin-remove-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <p style="font-weight: 300; font-size: 16px;" class="uk-margin-small-left uk-margin-remove-top uk-margin-remove-bottom">1990 руб.</p>
-                    </div>
-                </div>
-                <div style="height: 45vh; width: 32%;">
-                    <div style="height: 70%; " uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album"></div>
-                    <div>
-                        <p style="font-weight: 300; font-size: 18px;" class="uk-margin-small-left uk-margin-remove-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <p style="font-weight: 300; font-size: 16px;" class="uk-margin-small-left uk-margin-remove-top uk-margin-remove-bottom">1990 руб.</p>
-                    </div>
-                </div>
-                <div style="height: 45vh; width: 32%; ">
-                    <div style="height: 70%; " uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album"></div>
-                    <div>
-                        <p style="font-weight: 300; font-size: 18px;" class="uk-margin-small-left uk-margin-remove-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <p style="font-weight: 300; font-size: 16px;" class="uk-margin-small-left uk-margin-remove-top uk-margin-remove-bottom">1990 руб.</p>
-                    </div>
-                </div>
+
+            {% endfor %}
 
             </div>
         </div>
@@ -197,6 +169,8 @@
     <ul class="uk-slider-items uk-grid uk-margin-large-top" style="margin: auto">
         <li class="uk-width-1 uk-flex">
 
+            {% for product in products_bottom_1 %}
+
             <div style="height: 45vh; width: 24%; margin-right: 2%"  >
                 <div style="height: 70%; " uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album"></div>
                 <div>
@@ -204,7 +178,12 @@
                     <p style="font-weight: 300; font-size: 16px;" class="uk-margin-small-left uk-margin-remove-top uk-margin-remove-bottom">1990 руб.</p>
                 </div>
             </div>
-            <div style="height: 45vh; width: 24%; margin-right: 2%">
+
+            {% endfor %}
+
+
+
+            <!-- <div style="height: 45vh; width: 24%; margin-right: 2%"  >
                 <div style="height: 70%; " uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album"></div>
                 <div>
                     <p style="font-weight: 300; font-size: 18px;" class="uk-margin-small-left uk-margin-remove-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -232,9 +211,29 @@
                     <p style="font-weight: 300; font-size: 16px;" class="uk-margin-small-left uk-margin-remove-top uk-margin-remove-bottom">1990 руб.</p>
                 </div>
             </div>
+            <div style="height: 45vh; width: 24%; margin-right: 2%">
+                <div style="height: 70%; " uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album"></div>
+                <div>
+                    <p style="font-weight: 300; font-size: 18px;" class="uk-margin-small-left uk-margin-remove-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p style="font-weight: 300; font-size: 16px;" class="uk-margin-small-left uk-margin-remove-top uk-margin-remove-bottom">1990 руб.</p>
+                </div>
+            </div> -->
         </li>
         <li class="uk-width-1 uk-flex">
-            <div style="height: 45vh; width: 24%; margin-right: 2%"  >
+
+            {% for product in products_bottom_2 %}
+
+                <div style="height: 45vh; width: 24%; margin-right: 2%"  >
+                    <div style="height: 70%; " uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album"></div>
+                    <div>
+                        <p style="font-weight: 300; font-size: 18px;" class="uk-margin-small-left uk-margin-remove-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p style="font-weight: 300; font-size: 16px;" class="uk-margin-small-left uk-margin-remove-top uk-margin-remove-bottom">1990 руб.</p>
+                    </div>
+                </div>
+
+            {% endfor %}
+
+            <!-- <div style="height: 45vh; width: 24%; margin-right: 2%">
                 <div style="height: 70%; " uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album"></div>
                 <div>
                     <p style="font-weight: 300; font-size: 18px;" class="uk-margin-small-left uk-margin-remove-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -262,14 +261,7 @@
                     <p style="font-weight: 300; font-size: 16px;" class="uk-margin-small-left uk-margin-remove-top uk-margin-remove-bottom">1990 руб.</p>
                 </div>
             </div>
-            <div style="height: 45vh; width: 24%; margin-right: 2%">
-                <div style="height: 70%; " uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album"></div>
-                <div>
-                    <p style="font-weight: 300; font-size: 18px;" class="uk-margin-small-left uk-margin-remove-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <p style="font-weight: 300; font-size: 16px;" class="uk-margin-small-left uk-margin-remove-top uk-margin-remove-bottom">1990 руб.</p>
-                </div>
-            </div>
-            
+             -->
 
         </li>
        
