--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -1,35 +1,24 @@
     {% for product in products %}
-    <li data-sex="{{product.sex}}" data-rating="{{product.flooredrating}}" data-duration="{{product.duration}}"
-        data-price="{{product.id}}">
-        <a href="/goods/{{product.id}}" class="uk-text-secondary uk-link-reset">
-            <div class="box-footer">
-                <div style="width:238px;height:443px; margin: auto;">
-                    <img src="{{product.picture1}}" width="200px" height="400px " alt="">
+<div style="height: 60vh; width: 25% ; background-color: none; color:black; padding: 0; margin: 3%;" class="uk-card-hover uk-card ">
+                    <a class="uk-link-reset" href="/goods/{{product.id}}" style="width: 100%;">
 
-                    <div class="box-down">
-                        <h3 style="font-size:25px; font-weight:bold; margin: 0;">{{product.show_price}} ₽</h3>
-                        <p class="star">
+                    <div style="height: 70%; background-size: cover;" uk-img data-src="{{product.picture1}}"></div>
+                   <!-- uk-margin-small-left -->
+                    <div>
+                        <p style="font-weight: 450; font-size: 30px;" class=" uk-margin-remove-bottom">{{product.show_price}} ₽</p>
+                        <!-- <p style="font-weight: 400; font-size: 20px;" class=" uk-margin-remove-top uk-margin-remove-bottom">{{product.brand}} Brand</p> -->
+                        <p style="font-weight: 300; font-size: 20px;" class=" uk-margin-remove-top uk-margin-remove-bottom uk-panel uk-text-truncate">{{product.brand}} / {{ product.product_name }} kdbfjkbdsjfbdsbfsbdfbs bsj jlsb s bdfbsdfb sdb fbsdfjb sdjsfdbjhjsbdfjdbshjfb</p>
+                        <p style="font-weight: 300; font-size: 20px;" class=" uk-margin-remove-top uk-margin-remove-bottom uk-panel uk-text-truncate">
+                            <p class="star">
                             <strong>&star;</strong>
                             <strong>&star;</strong>
                             <strong>&star;</strong>
                             <strong>&star;</strong>
                             <strong>&star;</strong>
                         </p>
-                        <p class="uk-text-truncate" style="font-size:15px; margin: 0;">{{product.product_name}}</p>
+                    </p>
                     </div>
-                    <div class="box-down-drop">
-                        <div style="margin: auto;" class="box-down-drop-img">
-                            <p style="margin: 0;" class="">{{product.brand}}</p>
-                        </div>
-                    </div>
+                    </a>
                 </div>
-
-            </div>
-        </a>
-    </li>
-
-    <style>
-        
-    </style>
 
     {% endfor %}
