fix index page links

--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -132,7 +132,7 @@
             {% for product in products_start %}
 
                <div style="height: 45vh; width: 32%; margin: 0">
-                    <a class="uk-link-reset" href="">
+                    <a class="uk-link-reset" href="/goods/{{product.id}}">
                         <div style="height: 70%; " uk-img data-src="{{product.picture1}}"></div>
                         <div>
                             <p style="font-weight: 300; font-size: 18px;" class="uk-margin-small-left uk-margin-remove-bottom">{{ product.product_name }}</p>
@@ -171,12 +171,15 @@
 
             {% for product in products_bottom_1 %}
 
-            <div style="height: 45vh; width: 24%; margin-right: 2%"  >
+            <div style="height: 45vh; width: 24%; margin-right: 2%">
+                <a class="uk-link-reset" href="/goods/{{product.id}}">
+
                 <div style="height: 70%; " uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album"></div>
                 <div>
                     <p style="font-weight: 300; font-size: 18px;" class="uk-margin-small-left uk-margin-remove-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <p style="font-weight: 300; font-size: 16px;" class="uk-margin-small-left uk-margin-remove-top uk-margin-remove-bottom">1990 руб.</p>
                 </div>
+                </a>
             </div>
 
             {% endfor %}
@@ -224,11 +227,14 @@
             {% for product in products_bottom_2 %}
 
                 <div style="height: 45vh; width: 24%; margin-right: 2%"  >
+                    <a class="uk-link-reset" href="/goods/{{product.id}}">
+
                     <div style="height: 70%; " uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album"></div>
                     <div>
                         <p style="font-weight: 300; font-size: 18px;" class="uk-margin-small-left uk-margin-remove-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <p style="font-weight: 300; font-size: 16px;" class="uk-margin-small-left uk-margin-remove-top uk-margin-remove-bottom">1990 руб.</p>
                     </div>
+                    </a>
                 </div>
 
             {% endfor %}
