--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -1,6 +1,6 @@
     {% for product in products %}
-        <div style="height: 60vh; width: 25% ; background-color: #ccc; color:black; padding: 0; margin: 3%; border-radius: 0px 0px 0px 0px;" >
-            <a class="uk-link-reset" href="/goods/{{product.id}}" style="width: 100%; ">
+        <div class="frame">
+            <a class="uk-link-reset" href="/goods/{{product.id}}" style="width: 100%;">
 
                 <div style="height: 70%; background-size: cover;" uk-img data-src="{{product.picture1}}"></div>
                 <!-- uk-margin-small-left -->
@@ -19,7 +19,7 @@
 
                         </p>
                     </p>
-                    <p></p>
+                    <p style="font-weight: 300; font-size: 20px; display: none;" class="text_b uk-margin-remove-top uk-panel uk-text-truncate">Доступные размеры: {{product.size}}</p>
                 </div>
 
             </a>
@@ -29,8 +29,30 @@
     {% endfor %}
 
     <style>
+    
         .frame{
-            width: 30%;
-            background-color: #ccc;
+            height: 60vh;
+            width: 25%;
+            /* background-color: #ccc; */
+            color:black;
+            padding: 1%;
+            margin: 1%;
+            border-radius: 10px 10px 10px 10px;
+            transition: 0;
+            
         }
+
+        .frame:hover {
+            box-shadow: 0px 0px 25px 4px #ccc;
+            animation-name: example;
+            animation-duration: 4s;
+    
+        }
+
+        .frame:hover .text_b {
+            display: block;
+        }
+
+        
+    
     </style>
