--- a/bizopt/BO/templates/cart.html
+++ b/bizopt/BO/templates/cart.html
@@ -1,6 +1,115 @@
 {% extends "base.html" %}
+
 {% block content %}
 
+<style>
+    
+    @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
+
+</style>
+
+<body>
+
+    <div style="width: 80%; margin: auto">
+        <div class="uk-flex-column">
+            <div class="uk-flex">
+                <div>
+                    <p style="font-weight: 600; font-size: 2.625em;">Корзина</p>
+                </div>
+                    <p class="uk-text-bottom uk-margin-small-left" style="font-weight: 600; font-size: 1em; margin-top: 30px;">n товаров</p>
+            </div>
+
+            <div class="uk-width-1 uk-flex">
+                    <div class="uk-width-2-3 uk-flex-column">
+                        <div class="uk-width-1 uk-border-rounded" style="background-color: lightgrey;">
+                            <p class="uk-margin-left" style="font-weight: 600; font-size: 1.5em;">Заказ "Название магазина"</p>
+                        </div>
+
+                            <div class="uk-flex">
+                                <div class="uk-margin-right" style="height: 25vh; width: 25%" uk-img data-src="https://hozmarket-ekb.ru/upload/iblock/5c2/5c20e8dd7650fd13b8a52d6d51a394aa.jpg">
+                                </div>
+                                <div class="uk-flex">
+                                    <div class="uk-grid-column-large" uk-grid-column>
+                                        <div>
+                                            <p style="font-weight: 600; font-size: 1.5em; margin-bottom: 0;">Название товара</p>
+                                            <p style="font-weight: 600; font-size: 1em; margin-top: 0;">"Название магазина"</p>
+                                        </div>
+                                        <div>
+                                            <button>
+                                                <div class="uk-flex">
+                                                    <span uk-icon="close" style=""></span>
+                                                    <p style="font-weight: 600; font-size: 1em; margin-bottom: 0; margin-top: 2px">Удалить из корзины</p>
+                                                </div>
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div class="uk-margin-large-left">
+                                        <p style="font-weight: 600; font-size: 1.5em;">500 р</p>
+                                        <div>
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                
+                    <div class="uk-width-1-4 uk-flex-column uk-margin-left">
+                        <div>
+                            <a class="uk-button uk-button-secondary uk-border-rounded uk-button-large uk-width-1" >Перейти к оформлению</a>
+                        </div>
+                        <div class="uk-flex-column uk-border-rounded" style="background-color: lightgray; height: 30vh">
+                            <div class="uk-flex uk-margin-left uk-margin-top" >
+                                <div class="uk-margin-top" >
+                                    <p style="font-weight: 600; font-size: 1.45em;">Итого</p>
+                                    <p style="font-weight: 600; font-size: 1em; margin: 0">Всего n товара(ов)</p>
+                                    <p style="font-weight: 600; font-size: 1em; margin: 0">Скидки</p>
+                                </div>
+                                <div class="uk-margin-top uk-margin-left">
+                                    <p style="font-weight: 600; font-size: 1.45em;">120р</p>
+                                    <p style="font-weight: 600; font-size: 1em; margin: 0   ">120р</p>
+                                    <p style="font-weight: 600; font-size: 1em; margin: 0">0</p>
+                                </div>
+                            </div>
+                            <div class="uk-margin-left uk-margin-medium-top">
+                                <div>
+                                    <div class="uk-flex">
+                            
+                                            <input class="uk-input uk-width-3-4 uk-margin-remove" placeholder="промокод" type="text">
+                                        <button class="uk-button uk-button-secondary uk-margin-right">применить</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>    
+</body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script>
+		$(document).ready(function() {
+			$('.minus').click(function () {
+				var $input = $(this).parent().find('input');
+				var count = parseInt($input.val()) - 1;
+				count = count < 1 ? 1 : count;
+				$input.val(count);
+				$input.change();
+				return false;
+			});
+			$('.plus').click(function () {
+				var $input = $(this).parent().find('input');
+				$input.val(parseInt($input.val()) + 1);
+				$input.change();
+				return false;
+			});
+		});
+</script>
+
+<!-- 
 <body>
     <div class="uk-flex uk-flex-between uk-flex-middle uk-width-4-5" style="margin: 0 auto">
         <h1>Корзина</h1>
@@ -67,10 +176,10 @@
                 <div class="uk-margin-top">
                     <h3>В связи с техническими неполадками, на платформе пока не работает оплата товара</h3>
                     <h3>приносим свои извенения за неудобства</h3>
-                    <!-- <p>Отсканируйте QR-код и оплатите товар</p> -->
+                     <p>Отсканируйте QR-код и оплатите товар</p> -->
                     <!-- <img -->
                     <!-- src="https://itumnik.ru/wp-content/uploads/2021/11/Risunok-1.-Izobrazhenie-QR-koda-sostoyashhego-iz-kvadratov.jpg"> -->
-                    <form method="post">
+                    <!-- <form method="post">
                         {% csrf_token %}
                         <button class="uk-button uk-button-primary" type="submit" name="payButton">Оплатить</button>
                     </form>
@@ -143,7 +252,7 @@
     .rate-area>label:active {
         position: relative;
     }
-</style>
+</style> -->
 
 
 {% endblock %}
