--- a/bizopt/BO/templates/base.html
+++ b/bizopt/BO/templates/base.html
@@ -45,7 +45,7 @@
 
 </head>
 <style>
-
+    @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 </style>
 
 <body class="uk-width-1" style="height: 100%;">
