fix inadex page

--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -250,8 +250,9 @@
     <div class="uk-grid uk-margin-large-top" style="height: 90vh">
         
         <div class="uk-width-1-3 ">
-            <div class="uk-background-cover" style="height: 90vh; margin-left: 3%" uk-img data-src="https://sun9-13.userapi.com/impg/WdBQX3pTiEevM5-Jq8PbRw3KCpSAt7ViTP1H8g/sdT05rynN9g.jpg?size=349x329&quality=96&sign=4a12051e3d1c4fd061634f112cce627a&type=album">
-                <p style="font-weight: 600; font-size: 2.25em; text-align: center;" >Подборки товаров</p>
+            <p style="font-weight: 600; font-size: 2.25em; text-align: left; margin-left: 3%" >Популярные товары 🠒</p>
+
+            <div class="uk-background-cover" style="height: 75vh; margin-left: 3%" uk-img data-src="https://img.freepik.com/free-photo/fashion-model-with-beautiful-face-and-perfect-body-wearing-trendy-dress-holding-brown-leather-hand-bag-full-length_273443-3993.jpg?w=1380&t=st=1667122172~exp=1667122772~hmac=bd70827c7b2f5b5085477505bcc38df40dad48264003db71091054707848d896">
 
                 <div>
                     <a class="uk-button uk-button-secondary uk-border-pill" style="margin-top: 90%; width: 50%; margin-left: 25%;" href="/goods/">Перейти в каталог</a>
